--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 /workall/javawork/Naver0314JavaProject/out/
 /workall/image
+/workall/webwork/image
+/workall/javawork/Servers/src/main/webapp/shop/
+.idea
+target
+out
+.mvn
+
+*.jpg
+*.png
+*.jpeg
+*.gif
+*.class
+*.jar
+*.zip
+*.txt
+*.doc
+*.ppt
